# STL

./: CMakeLists.txt  README.md
Ejercicio1/: main.cpp
Ejercicio2/: circulo.cpp  geometria.h  main.cpp  triangulo.cpp
Ejercicio3/: main.cpp
Ejercicio4/: main.cpp
Ejercicio5/: main.cpp
Ejercicio6/: main.cpp
Ejercicio7/: main.cpp
